--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
+  "name": "mars-rover",
+  "version": "1.0.0",
+  "description": "A small mars rover simulation",
+  "main": "index.js",
   "scripts": {
     "watch-ts": "tsc -w",
-    "watch-node": "nodemon dist/rover.js",
+    "watch-node": "nodemon dist/index.js",
     "watch": "concurrently \"npm run watch-ts\" \"npm run watch-node\"",
     "test": "jest",
     "test:watch": "jest --watchAll"
