--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "A small mars rover simulation",
   "main": "index.js",
+  "license": "MIT",
   "scripts": {
+    "start": "ts-node index.ts",
     "watch-ts": "tsc -w",
     "watch-node": "nodemon dist/index.js",
     "watch": "concurrently \"npm run watch-ts\" \"npm run watch-node\"",
